--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.46.0",
+    "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.15.0",
     "firebaseui": "^6.0.2",
